<resources>
    <string name="app_name">RPN Calculator</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="display_header">Display</string>
    <string name="math_header">Mathematical</string>

    <!-- Display Preferences -->
    <string name="stack_background_title">Stack background color</string>

    <!-- Mathematical Preferences -->
    <string name="accuracy_title">Decimal accuracy</string>
    <string name="stack_display_size_title">Number of displayed stack values</string>
    <string name="accuracy_summary">Specify number of digits after decimal point</string>
    <string name="background_title">Main background color</string>
</resources>